adding routes and controllers for new collection - motorcycles
